Kubernetes/tomcat-app/deployment.yaml

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: tomcat-app-deployment
spec:
  selector:
    matchLabels:
      app: tomcat
  replicas: 4
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: agill17/tomcat:latest
        ports:
        - name: tomcat-app-port
          containerPort: 8080
        livenessProbe:
          successThreshold: 1
          failureThreshold: 1
          httpGet:
            path: /
            port: tomcat-app-port
          initialDelaySeconds: 35
          timeoutSeconds: 30
      nodeSelector:
        env: dev
        provider: aws
