Kubernetes/tomcat-app/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-app
  labels:
    app: tomcat
spec:
  containers:
  - name: tomcat-app-container
    image: agill17/tomcat:latest
    ports:
    - name: tomcat-app-port
      containerPort: 8080
  nodeSelector:
    env: local
