Kubernetes/tomcat-app/elb_service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: tomcat-port
    protocol: TCP
  selector:
    app: tomcat
