Kubernetes/tomcat-app/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
spec:
  ports:
  - port: 31000
    nodePort: 31000
    targetPort: 8080
    protocol: TCP
  selector:
    app: tomcat
  type: NodePort
